samples/_failures_safe/1761444429_d69833_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f893990.c: In function ‘main’:
./samples/SAFE/__tmp_5f893990.c:131:19: error: expected ‘)’ at end of input
  131 |         if (strlen
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_5f893990.c:131:9: error: expected declaration or statement at end of input
  131 |         if (strlen
      |         ^~
./samples/SAFE/__tmp_5f893990.c:131:9: error: expected declaration or statement at end of input
